--- a/style.css
+++ b/style.css
@@ -298,6 +298,7 @@ input:-webkit-autofill:focus {
     border-bottom: 0 none;
     border-top: 0 none;
     margin-bottom: 0;
+    padding-top: 20px;
 }
 
 ul#nav {
